--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "2.29.0",
     "immutability-helper": "^2.7.1",
     "jest": "20.0.4",
+    "lodash": "^4.17.10",
     "node-sass": "^4.9.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -37,6 +38,7 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-drag-and-drop": "^2.4.0",
     "react-grid-layout": "^0.16.6",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
