--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-drag-and-drop": "^2.4.0",
     "react-grid-layout": "^0.16.6",
     "react-loadable": "^5.4.0",
+    "react-mosaic-component": "^1.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
